[tool.poetry]
name = "ably-test"
version = "0.1.0"
description = ""
authors = ["TaeJun Lee <tejunlee007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
django-rest-swagger = "^2.2.0"
django-debug-toolbar = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
